name:                timeutils
version:             0.1.0.0
synopsis:            Time Utilities
description:         Please see README.md
homepage:            https://github.com/nanonaren/timeutils#readme
license:             BSD3
license-file:        LICENSE
author:              Naren Sundaravaradan
maintainer:          nano.naren@gmx.com
copyright:           2016 Naren Sundaravaradan
category:            Utils
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DateTime.Simple
                       DateTime.Match
  build-depends:       base >= 4.7 && < 5
                     , time
                     , array
  default-language:    Haskell2010

test-suite timeutils-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timeutils
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nanonaren/timeutils
